--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <link rel="shortcut icon" href="img/aa.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>秦皇岛应急管理局</title>
   <link rel="stylesheet" href="index.css" />
